2008-11-26  Sancho Lerena <slerena@artica.es>
	
	* util/plugin/mysql_plugin.sh: New Mysql plugin for Plugin server.


2008-11-11  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Added mta_user parameter who defines
	mail address used for alerts.

	* pandora_ctl: General control script to start/stop Pandora FMS
	daemons.

	* util/SLES10/*: Alternative start/stop daemons for SUSE and
	other systems that don't work fine with standard scripts.


2008-11-08  Sancho Lerena <slerena@gmail.com>

	* Config.pm: Fixed bug parsing config options with more
	than 2 digits. Thanks to Glen Eustace.

2008-11-07  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_server: Fixed an important problem detected
	in Keepalive module, present since revision #678.

2008-10-30  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm:  Some people reports problems with 
	server stop detection. This could help, because has optimized
	way to detect servers, but is not a bugfix because I cannot 
	reproduce the problem.

2008-10-29  Manuel Arostegui <marostegui@artica.es>
	
	* pandora_server/lib/PandoraFMS/Config.pm: Updated build number.

2008-10-27  Esteban Sanchez  <esteban@artica.es>

	* pandora_server_installer, lib/PandoraFMS/DB.pm: Merged from trunk
	version, fixing a couple of bugs.

2008-10-16  Sancho Lerena <slerena@artica.es>

	* Config.pm: Version update.

	This should be the final commit for 2.0 stable version.  

2008-10-10  Sancho Lerena <slerena@artica.es>

	* bin/pandora_snmpconsole: Trap SNMP forward not will included in 
	this version, moved to 2.1 roadmap.

	* bin/pandora_snmpconsole: Added support to get custom value, 
	custom type and custom OID. Code for trap2agent forward feature
	not fully implemented, don't work yet, need finish.
	
	* util/pandora_db.pl: Now delete also events and session information.
	String data is using utimestamp to purge (faster!).

2008-10-02  Ramon Novoa  <rnovoa@artica.es>
