@@ -1,3 +1,8 @@
+
+2008-12-03  Sancho Lerena <slerena@artica.es>
+
+        * mysql_plugin.sh: Updated MySQL plugin.  
+
 2008-11-26  Sancho Lerena <slerena@artica.es>
 	
 	* util/plugin/mysql_plugin.sh: New Mysql plugin for Plugin server.
